Fri Jun 20 14:48:56 2003  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/orbsvcs/Event/EC_Reactive_SupplierControl.cpp: 
	* orbsvcs/orbsvcs/Event/EC_Default_Factory.cpp: 
	* orbsvcs/orbsvcs/Event/ECG_UDP_Sender.cpp: 
	* orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.cpp: 
	* orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.cpp: 
	* orbsvcs/orbsvcs/Event/ECG_Mcast_EH.cpp: 
	* orbsvcs/Event_Service/Event_Service.cpp:

	  Added missing explicit instantiations that were causing build
	  problems on impaired platforms.  Some of the explicit
	  instantiations probably ought to be handled in generated code or
	  other places, but that's a bigger issue to bite off.

Fri Jun 20 12:56:32 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.h:

	  Fixed case error in spelling of included file. Thanks to Diego
	  Sevilla Ruiz <dsevilla@ditec.um.es> for reporting the mistake.

Fri Jun 20 10:08:25 2003  Gan Deng  <gan.deng@vanderbilt.edu>

	* performance-tests/Sequence_Latency/AMI/Makefile
	* performance-tests/Sequence_Latency/AMI/Makefile.bor

	  Deleted the old "makefile" and "makefile.bor", which have
	  wrong lower case file name causing the build error.
	  Simply changed the file names and fixed the problem.

Fri Jun 20 10:10:07 2003  Chad Elliott  <elliott_c@ociweb.com>

        * tests/QtTests/QtTests.mpc:

          Added a project for the QtTests.  This will only get built if the
          qt feature is enabled.

Fri Jun 20 14:50:32 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tao/RTCORBA/RTCORBA.h:
        * tao/RTCORBA/RT_Endpoint_Selector_Factory.h:
        * tao/RTCORBA/RT_ORB_Loader.h:
          Adjusted location of ifdef so that it's after orbconf.h
          which is where ACE_HAS_CORBA_MESSAGING gets set if you user
          doesn't specify it explicitely.

Fri Jun 20 11:26:14 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/EC_Default_ProxySupplier.cpp: